# dso_interview_tasks

task_1/: KTest.c  KTest.h.gch  README.md  crash_fpe.ktest  ktest-corpus-generator.c  ktest-fuzz-target.txt  target.c
task_1/corpus/: corpus_basic.ktest  corpus_div_zero.ktest  corpus_exact_match.ktest  corpus_with_args.ktest
task_1/obsolete/: README.md  crash_158.ktest  crash_163.ktest  crash_164.ktest  crash_164_2.ktest  target_parse.c
task_2/: CMakeLists.txt  InstCnt.cpp  README.md  a.c  b.c  bin.awk  count_inst.sh  gp.gp
task_2/example/: README.md
task_2/example_claude/: CMakeLists.txt  MyFirstPass.cpp
